# Sieve

./: .env.example  .gitignore  Dockerfile  README.md  app.py  data.py  environment.py  inference.py  logger.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  config.py  environment.py
